examples/cfn/json/vpc-network/output.yaml
AWSTemplateFormatVersion:               '2010-09-09'
Description:                            VPC with public and private subnets across two availability zones


Parameters:
  VpcCidr:
    Type:                               String
    Description:                        CIDR block for the VPC
    Default:                            10.0.0.0/16
  PublicSubnet1Cidr:
    Type:                               String
    Description:                        CIDR block for public subnet in AZ1
    Default:                            10.0.1.0/24
  PublicSubnet2Cidr:
    Type:                               String
    Description:                        CIDR block for public subnet in AZ2
    Default:                            10.0.2.0/24
  PrivateSubnet1Cidr:
    Type:                               String
    Description:                        CIDR block for private subnet in AZ1
    Default:                            10.0.11.0/24
  PrivateSubnet2Cidr:
    Type:                               String
    Description:                        CIDR block for private subnet in AZ2
    Default:                            10.0.12.0/24


Resources:

  ##
  ## VPC
  ##

  VPC:
    Type:                               AWS::EC2::VPC
    Properties:
      CidrBlock:                        !Ref VpcCidr
      EnableDnsHostnames:               true
      EnableDnsSupport:                 true
      Tags:
        - Key:                          Name
          Value:                        !Sub ${AWS::StackName}-vpc

  ##
  ## InternetGateway
  ##

  InternetGateway:
    Type:                               AWS::EC2::InternetGateway
    Properties:
      Tags:
        - Key:                          Name
          Value:                        !Sub ${AWS::StackName}-igw

  ##
  ## AttachGateway
  ##

  AttachGateway:
    Type:                               AWS::EC2::VPCGatewayAttachment
    Properties:
      VpcId:                            !Ref VPC
      InternetGatewayId:                !Ref InternetGateway

  ##
  ## PublicSubnet1
  ##

  PublicSubnet1:
    Type:                               AWS::EC2::Subnet
    Properties:
      VpcId:                            !Ref VPC
      CidrBlock:                        !Ref PublicSubnet1Cidr
      AvailabilityZone:                 !Select
        -                               0
        -                               !GetAZs
      MapPublicIpOnLaunch:              true
      Tags:
        - Key:                          Name
          Value:                        !Sub ${AWS::StackName}-public-subnet-1

  ##
  ## PublicSubnet2
  ##

  PublicSubnet2:
    Type:                               AWS::EC2::Subnet
    Properties:
      VpcId:                            !Ref VPC
      CidrBlock:                        !Ref PublicSubnet2Cidr
      AvailabilityZone:                 !Select
        -                               1
        -                               !GetAZs
      MapPublicIpOnLaunch:              true
      Tags:
        - Key:                          Name
          Value:                        !Sub ${AWS::StackName}-public-subnet-2

  ##
  ## PrivateSubnet1
  ##

  PrivateSubnet1:
    Type:                               AWS::EC2::Subnet
    Properties:
      VpcId:                            !Ref VPC
      CidrBlock:                        !Ref PrivateSubnet1Cidr
      AvailabilityZone:                 !Select
        -                               0
        -                               !GetAZs
      Tags:
        - Key:                          Name
          Value:                        !Sub ${AWS::StackName}-private-subnet-1

  ##
  ## PrivateSubnet2
  ##

  PrivateSubnet2:
    Type:                               AWS::EC2::Subnet
    Properties:
      VpcId:                            !Ref VPC
      CidrBlock:                        !Ref PrivateSubnet2Cidr
      AvailabilityZone:                 !Select
        -                               1
        -                               !GetAZs
      Tags:
        - Key:                          Name
          Value:                        !Sub ${AWS::StackName}-private-subnet-2

  ##
  ## PublicRouteTable
  ##

  PublicRouteTable:
    Type:                               AWS::EC2::RouteTable
    Properties:
      VpcId:                            !Ref VPC
      Tags:
        - Key:                          Name
          Value:                        !Sub ${AWS::StackName}-public-routes

  ##
  ## PublicRoute
  ##

  PublicRoute:
    Type:                               AWS::EC2::Route
    Properties:
      RouteTableId:                     !Ref PublicRouteTable
      DestinationCidrBlock:             0.0.0.0/0
      GatewayId:                        !Ref InternetGateway
    DependsOn:                          AttachGateway

  ##
  ## PublicSubnet1RouteTableAssociation
  ##

  PublicSubnet1RouteTableAssociation:
    Type:                               AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId:                         !Ref PublicSubnet1
      RouteTableId:                     !Ref PublicRouteTable

  ##
  ## PublicSubnet2RouteTableAssociation
  ##

  PublicSubnet2RouteTableAssociation:
    Type:                               AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId:                         !Ref PublicSubnet2
      RouteTableId:                     !Ref PublicRouteTable

  ##
  ## NatGateway1EIP
  ##

  NatGateway1EIP:
    Type:                               AWS::EC2::EIP
    Properties:
      Domain:                           vpc
    DependsOn:                          AttachGateway

  ##
  ## NatGateway2EIP
  ##

  NatGateway2EIP:
    Type:                               AWS::EC2::EIP
    Properties:
      Domain:                           vpc
    DependsOn:                          AttachGateway

  ##
  ## NatGateway1
  ##

  NatGateway1:
    Type:                               AWS::EC2::NatGateway
    Properties:
      AllocationId:                     !GetAtt NatGateway1EIP.AllocationId
      SubnetId:                         !Ref PublicSubnet1

  ##
  ## NatGateway2
  ##

  NatGateway2:
    Type:                               AWS::EC2::NatGateway
    Properties:
      AllocationId:                     !GetAtt NatGateway2EIP.AllocationId
      SubnetId:                         !Ref PublicSubnet2

  ##
  ## PrivateRouteTable1
  ##

  PrivateRouteTable1:
    Type:                               AWS::EC2::RouteTable
    Properties:
      VpcId:                            !Ref VPC
      Tags:
        - Key:                          Name
          Value:                        !Sub ${AWS::StackName}-private-routes-1

  ##
  ## PrivateRoute1
  ##

  PrivateRoute1:
    Type:                               AWS::EC2::Route
    Properties:
      RouteTableId:                     !Ref PrivateRouteTable1
      DestinationCidrBlock:             0.0.0.0/0
      NatGatewayId:                     !Ref NatGateway1

  ##
  ## PrivateSubnet1RouteTableAssociation
  ##

  PrivateSubnet1RouteTableAssociation:
    Type:                               AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId:                         !Ref PrivateSubnet1
      RouteTableId:                     !Ref PrivateRouteTable1

  ##
  ## PrivateRouteTable2
  ##

  PrivateRouteTable2:
    Type:                               AWS::EC2::RouteTable
    Properties:
      VpcId:                            !Ref VPC
      Tags:
        - Key:                          Name
          Value:                        !Sub ${AWS::StackName}-private-routes-2

  ##
  ## PrivateRoute2
  ##

  PrivateRoute2:
    Type:                               AWS::EC2::Route
    Properties:
      RouteTableId:                     !Ref PrivateRouteTable2
      DestinationCidrBlock:             0.0.0.0/0
      NatGatewayId:                     !Ref NatGateway2

  ##
  ## PrivateSubnet2RouteTableAssociation
  ##

  PrivateSubnet2RouteTableAssociation:
    Type:                               AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId:                         !Ref PrivateSubnet2
      RouteTableId:                     !Ref PrivateRouteTable2


Outputs:
  VpcId:
    Description:                        VPC ID
    Value:                              !Ref VPC
    Export:
      Name:                             !Sub ${AWS::StackName}-vpc-id
  PublicSubnet1Id:
    Description:                        Public subnet 1 ID
    Value:                              !Ref PublicSubnet1
    Export:
      Name:                             !Sub ${AWS::StackName}-public-subnet-1-id
  PublicSubnet2Id:
    Description:                        Public subnet 2 ID
    Value:                              !Ref PublicSubnet2
    Export:
      Name:                             !Sub ${AWS::StackName}-public-subnet-2-id
  PrivateSubnet1Id:
    Description:                        Private subnet 1 ID
    Value:                              !Ref PrivateSubnet1
    Export:
      Name:                             !Sub ${AWS::StackName}-private-subnet-1-id
  PrivateSubnet2Id:
    Description:                        Private subnet 2 ID
    Value:                              !Ref PrivateSubnet2
    Export:
      Name:                             !Sub ${AWS::StackName}-private-subnet-2-id
